# FreeCM

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_REFACTOR_TODO.md  LICENSE  README.md  REPOSITORY_QUALITY_TODO.md  SECURITY.md  TODO  TODO.md  pyproject.toml
.codex/freecm-wiring/: SKILL.md
.codex/freecm-wiring/assets/: owner-managed-latest.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cpprepomgr/: __init__.py  cmake_workflow.py  dependency_root_workflow.py  errors.py  preset_templates.py  source_root_workflow.py
cpprepomgr/clangd/: .clangd.in
cpprepomgr/cmake/: CppKitAddExecutable.cmake  CppKitCoverage.cmake  CppKitDoxygen.cmake  CppKitHeaderExport.cmake  CppKitMemcheck.cmake  CppKitPackage.cmake  CppKitRunMemcheck.cmake  CppKitThirdPartyChecks.cmake  DependencyBootstrap.cmake  DependencyBuildContext.json.in
cpprepomgr/cmake_presets/: CMakePresets.json.linux.in  CMakePresets.json.mac.in  CMakePresets.json.win.in
cpprepomgr/package/: cli.py  common.py  linux_deploy.py  mac_deploy.py  win_deploy.py
cpprepomgr/tools/: ci_targets.py  comments.py  file_lists.py  format_code.py  header_guards.py  json_codegen.py  markdown_catalog.py  repo_tool.py
depsfixture/: __init__.py  asset_seeds.py  dependency_roots.py  path_maps.py  terminal_style.py
docs/: architecture.md  compatibility.md  dependency-lock-schema.md  org-adoption-guide.md  release-process.md  vscode-extension-mvp.md
examples/abc-chain/: README.md  create-fixture.py
freecm/: __init__.py  _version.py  app_configs.py  asset_seeds.py  atomic_write.py  cli_support.py  closure_resolver.py  conflict_resolver.py  dependency_cli.py  dependency_commands.py  dependency_conflicts.py  dependency_lock.py  dependency_manager_contract.py  dependency_models.py  dependency_names.py  dependency_policy.py  dependency_reports.py  dependency_roots.py  dependency_workflow.py  errors.py  git_repositories.py  io_metrics.py  jsonc.py  lock-schema-contract.json  lock_compat.py  lock_manager.py  lock_schema.py  materializer.py  path_maps.py  seed_store.py  source_root_workflow.py  subprocess_utils.py  terminal_style.py  utils.py  workspace_lock.py
hooks/: README.md  commit-msg  commit_msg.py  format.py  install.py  path.ini.sample  pre-commit  pre_commit.py  prepare-commit-msg
repomgrandroid/: __init__.py  workflow.py
repomgrcpp/: cmake_dependency_builder.py  cmake_preset_context.py  cmake_workflow.py  cmake_workflow_binding.py  preset_templates.py  source_root_workflow.py
repomgrcpp/cmake/: CppKitBundleResources.cmake  CppKitCompilerFlags.cmake  CppKitCoverage.cmake  CppKitDeployQt.cmake  CppKitEnsureRustArtifact.cmake  CppKitHeaderExport.cmake  CppKitPackage.cmake  CppKitRust.cmake  DependencyBootstrap.cmake  debug_pkg_config.cmake
repomgrcpp/package/: __init__.py  cli.py  common.py  linux_deploy.py  mac_deploy.py  win_deploy.py  wix.py
repomgrcpp/tools/: __init__.py  ci_targets.py  comments.py  file_lists.py  format_code.py  header_guards.py  json_codegen.py  markdown_catalog.py  repo_tool.py
repomgrdotnet/: __init__.py  workflow.py
repomgrswift/: __init__.py  source_roots.py  swift_configs.py  terminal_style.py
scripts/: check-version-consistency.py  smoke_installed_wheel.py  sync-version.py  test-fast.py
swiftrepomgr/: __init__.py  source_root_workflow.py  source_roots.py  terminal_style.py
tests/: git_test_helpers.py  test_android_workflow.py  test_asset_seeds.py  test_atomic_write.py  test_cli_support.py  test_cmake_dependency_builder.py  test_cmake_preset_context.py  test_cmake_tools.py  test_cmake_workflow.py  test_cmake_workflow_binding.py  test_dependency_lock.py  test_dependency_models.py  test_dependency_root_workflow.py  test_dependency_roots.py  test_dependency_workflow.py  test_dotnet_workflow.py  test_examples.py  test_git_repositories.py  test_hooks.py  test_io_metrics.py  test_package_tools.py  test_regression_concurrency.py  test_regression_execution.py  test_regression_reporting.py  test_regression_tools.py  test_release_smoke.py  test_repo_tools.py  test_repomgrswift.py  test_swiftrepomgr.py  test_version.py
tests/fixtures/dependency-lock-conformance/: invalid-dependencies-map.jsonc  invalid-dependency-name.jsonc  invalid-empty-commit.jsonc  invalid-empty-remote.jsonc  invalid-entry-field.jsonc  invalid-key-mismatch.jsonc  invalid-malformed.jsonc  invalid-manual-map.jsonc  invalid-manual-path.jsonc  invalid-mode.jsonc  invalid-optional-string.jsonc  invalid-removed-field.jsonc  invalid-repo-name.jsonc  invalid-schema.jsonc  manifest.json  valid-legacy-field.jsonc  valid-manual-optional.jsonc  valid-minimal.jsonc
tools/: __init__.py  cleanup.py  file_lists.py  git_summary.py  host_clang_format.py  json_codegen.py  lock_compat.py  performance_baseline.py  performance_fixtures.py  remove_old_build.py
tools/regression/: __init__.py  assertions.py  cases.py  cli.py  execution.py  models.py  reporting.py  runner.py
vscode-extension/: .gitignore  .vscode-test.mjs  .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  validator-build-contract.json
vscode-extension/resources/: workflow.css  workflow.js
vscode-extension/scripts/: clean-out.mjs  package-vsix.mjs  smoke-vsix.mjs  smoke-vsix.test.mjs  vsix-smoke-paths.cjs  vsix-smoke-runner.cjs  write-build-info.mjs  write-lock-schema.mjs  write-validator-stamp.mjs
vscode-extension/src/: atomicWrite.ts  cleanBuild.ts  codeCounter.ts  extension.ts  gitWorkflow.ts  lockSchema.ts  lockSchemaValidation.ts  lockWorkflow.ts  performanceMetrics.ts  repoCommandReadiness.ts  repoCommandState.ts  repoCommands.ts  terminalLogger.ts  terminalPath.ts  validateRepoCommands.ts  workflowCommands.ts  workflowRunner.ts  workspaceCache.ts  workspaceDiscovery.ts  workspaceLock.ts
vscode-extension/src/codeCounter/: engine.ts  fileDiscovery.ts  languageDiscovery.ts  (+4 more)
(+35 files in other folders)
