[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "freecm"
version = "0.1.78"
description = "Shared repository configuration and workflow helpers"
requires-python = ">=3.10"
dependencies = []
license = "MIT"

[project.scripts]
freecm-deps = "freecm.dependency_roots:_main_unbound"
repomgrcpp = "repomgrcpp.source_root_workflow:main"
package-tool = "repomgrcpp.package.cli:main"
regression-tool = "tools.regression.cli:main"
repo-tool = "repomgrcpp.tools.repo_tool:main"

[project.optional-dependencies]
dev = [
    "bandit>=1.7.0",
    "black>=23.0.0",
    "coverage>=7.0.0",
    "mypy>=1.0.0",
    "pip-audit>=2.7.0",
    "ruff>=0.1.0",
]
security = [
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
]
test = [
    "coverage>=7.0.0",
]

[tool.setuptools]
packages = ["freecm", "repomgrcpp", "repomgrcpp.cmake", "repomgrcpp.cmake_presets", "repomgrcpp.package", "repomgrcpp.tools", "repomgrswift", "repomgrandroid", "repomgrdotnet", "tools", "tools.regression"]

[tool.setuptools.package-data]
repomgrcpp = ["cmake_presets/*.in", "cmake/*.cmake", "cmake/*.json.in", "clangd/*.in"]

[tool.mypy]
python_version = "3.10"
files = [
    "freecm",
    "repomgrcpp",
    "repomgrswift",
    "repomgrandroid",
    "repomgrdotnet",
    "tools",
    "hooks",
    "scripts",
]
check_untyped_defs = true
follow_imports = "skip"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
# Remaining exemptions are scoped to existing direct-script import fallbacks and
# mixin-heavy workflow classes. New Python code is also checked by Ruff/Black.
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "misc",
    "no-any-return",
    "no-redef",
    "operator",
    "type-var",
    "union-attr",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B"]
ignore = [
    # User-callable scripts intentionally adjust sys.path before repo imports.
    "E402",
    # Black owns wrapping decisions; a few long usage strings remain clearer as-is.
    "E501",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.coverage.run]
source = [
    "freecm",
    "repomgrcpp",
    "repomgrswift",
    "repomgrandroid",
    "repomgrdotnet",
    "tools",
    "hooks",
    "scripts",
]

[tool.coverage.report]
show_missing = false
fail_under = 65

[tool.bandit]
exclude_dirs = ["tests"]
